// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`statsAPI statsAPI/basic should have stats 1`] = `
Object {
  "assets": Array [
    Object {
      "chunkNames": Array [
        "main",
      ],
      "chunks": Array [
        "909",
      ],
      "emitted": true,
      "info": Object {
        "chunkHash": Array [],
        "contentHash": Array [],
        "development": false,
        "hotModuleReplacement": false,
        "immutable": false,
        "javascriptModule": false,
        "minimized": true,
        "related": Object {},
      },
      "name": "main.js",
      "size": 206,
      "type": "asset",
    },
  ],
  "assetsByChunkName": Object {
    "main": Array [
      "main.js",
    ],
  },
  "children": Array [],
  "chunks": Array [
    Object {
      "auxiliaryFiles": Array [],
      "children": Array [],
      "childrenByOrder": Object {},
      "entry": true,
      "files": Array [
        "main.js",
      ],
      "hash": "3c2ed4017f8489a873cb",
      "id": "909",
      "idHints": Array [],
      "initial": true,
      "modules": Array [
        Object {
          "assets": Array [],
          "buildTimeExecuted": false,
          "built": true,
          "cacheable": true,
          "cached": false,
          "chunks": Array [
            "909",
          ],
          "codeGenerated": true,
          "dependent": false,
          "depth": 0,
          "errors": 0,
          "failed": false,
          "id": "585",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/a.js",
          "index": 0,
          "index2": 0,
          "issuer": undefined,
          "issuerId": undefined,
          "issuerName": undefined,
          "issuerPath": Array [],
          "moduleType": "javascript/auto",
          "name": "./fixtures/a.js",
          "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/a.js",
          "optimizationBailout": Array [
            "Statement with side_effects in source code at ./fixtures/a.js:1:0-3:2",
          ],
          "optional": false,
          "orphan": false,
          "postOrderIndex": 0,
          "preOrderIndex": 0,
          "providedExports": Array [],
          "reasons": Array [
            Object {
              "moduleId": undefined,
              "moduleIdentifier": undefined,
              "moduleName": undefined,
              "type": "entry",
              "userRequest": "./fixtures/a",
            },
            Object {
              "moduleId": "585",
              "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/a.js",
              "moduleName": "./fixtures/a.js",
              "type": "cjs self exports reference",
              "userRequest": "self",
            },
          ],
          "size": 55,
          "sizes": Object {
            "javascript": 55,
          },
          "source": "module.exports = function a() {
	return \\"This is a\\";
};",
          "type": "module",
          "usedExports": null,
          "warnings": 0,
        },
      ],
      "names": Array [
        "main",
      ],
      "origins": Array [
        Object {
          "loc": "main",
          "module": "",
          "moduleIdentifier": "",
          "moduleName": "",
          "request": "./fixtures/a",
        },
      ],
      "parents": Array [],
      "reason": undefined,
      "rendered": true,
      "runtime": Array [
        "main",
      ],
      "siblings": Array [],
      "size": 55,
      "sizes": Object {
        "javascript": 55,
      },
      "type": "chunk",
    },
  ],
  "entrypoints": Object {
    "main": Object {
      "assets": Array [
        Object {
          "name": "main.js",
          "size": 206,
        },
      ],
      "assetsSize": 206,
      "chunks": Array [
        "909",
      ],
      "name": "main",
    },
  },
  "env": undefined,
  "errors": Array [],
  "errorsCount": 0,
  "filteredModules": undefined,
  "hash": "9d920d978765dde01ad2",
  "modules": Array [
    Object {
      "assets": Array [],
      "buildTimeExecuted": false,
      "built": true,
      "cacheable": true,
      "cached": false,
      "chunks": Array [
        "909",
      ],
      "codeGenerated": true,
      "dependent": undefined,
      "depth": 0,
      "errors": 0,
      "failed": false,
      "id": "585",
      "identifier": "<PROJECT_ROOT>/tests/fixtures/a.js",
      "index": 0,
      "index2": 0,
      "issuer": undefined,
      "issuerId": undefined,
      "issuerName": undefined,
      "issuerPath": Array [],
      "moduleType": "javascript/auto",
      "name": "./fixtures/a.js",
      "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/a.js",
      "optimizationBailout": Array [
        "Statement with side_effects in source code at ./fixtures/a.js:1:0-3:2",
      ],
      "optional": false,
      "orphan": false,
      "postOrderIndex": 0,
      "preOrderIndex": 0,
      "providedExports": Array [],
      "reasons": Array [
        Object {
          "moduleId": undefined,
          "moduleIdentifier": undefined,
          "moduleName": undefined,
          "type": "entry",
          "userRequest": "./fixtures/a",
        },
        Object {
          "moduleId": "585",
          "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/a.js",
          "moduleName": "./fixtures/a.js",
          "type": "cjs self exports reference",
          "userRequest": "self",
        },
      ],
      "size": 55,
      "sizes": Object {
        "javascript": 55,
      },
      "source": "module.exports = function a() {
	return \\"This is a\\";
};",
      "type": "module",
      "usedExports": null,
      "warnings": 0,
    },
  ],
  "namedChunkGroups": Object {
    "main": Object {
      "assets": Array [
        Object {
          "name": "main.js",
          "size": 206,
        },
      ],
      "assetsSize": 206,
      "chunks": Array [
        "909",
      ],
      "name": "main",
    },
  },
  "outputPath": "<PROJECT_ROOT>/dist",
  "publicPath": "auto",
  "warnings": Array [],
  "warningsCount": 0,
}
`;

exports[`statsAPI statsAPI/exports should have usedExports and providedExports stats 1`] = `
Object {
  "assets": Array [
    Object {
      "chunkNames": Array [
        "main",
      ],
      "chunks": Array [
        "909",
      ],
      "emitted": true,
      "info": Object {
        "chunkHash": Array [],
        "contentHash": Array [],
        "development": false,
        "hotModuleReplacement": false,
        "immutable": false,
        "javascriptModule": false,
        "minimized": true,
        "related": Object {},
      },
      "name": "main.js",
      "size": 761,
      "type": "asset",
    },
  ],
  "assetsByChunkName": Object {
    "main": Array [
      "main.js",
    ],
  },
  "children": Array [],
  "chunks": Array [
    Object {
      "auxiliaryFiles": Array [],
      "children": Array [],
      "childrenByOrder": Object {},
      "entry": true,
      "files": Array [
        "main.js",
      ],
      "hash": "9a0309478283095b50e2",
      "id": "909",
      "idHints": Array [],
      "initial": true,
      "modules": Array [
        Object {
          "assets": Array [],
          "buildTimeExecuted": false,
          "built": true,
          "cacheable": true,
          "cached": false,
          "chunks": Array [
            "909",
          ],
          "codeGenerated": true,
          "dependent": true,
          "depth": 1,
          "errors": 0,
          "failed": false,
          "id": "83",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/esm/a.js",
          "index": 1,
          "index2": 0,
          "issuer": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
          "issuerId": "314",
          "issuerName": "./fixtures/esm/abc.js",
          "issuerPath": Array [
            Object {
              "id": "314",
              "identifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
              "name": "./fixtures/esm/abc.js",
            },
          ],
          "moduleType": "javascript/auto",
          "name": "./fixtures/esm/a.js",
          "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/esm/a.js",
          "optimizationBailout": Array [],
          "optional": false,
          "orphan": false,
          "postOrderIndex": 0,
          "preOrderIndex": 1,
          "providedExports": Array [
            "a",
            "default",
          ],
          "reasons": Array [
            Object {
              "moduleId": "314",
              "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
              "moduleName": "./fixtures/esm/abc.js",
              "type": "esm import",
              "userRequest": "./a",
            },
            Object {
              "moduleId": "314",
              "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
              "moduleName": "./fixtures/esm/abc.js",
              "type": "esm import specifier",
              "userRequest": "./a",
            },
          ],
          "size": 37,
          "sizes": Object {
            "javascript": 37,
          },
          "type": "module",
          "usedExports": Array [
            "a",
          ],
          "warnings": 0,
        },
        Object {
          "assets": Array [],
          "buildTimeExecuted": false,
          "built": true,
          "cacheable": true,
          "cached": false,
          "chunks": Array [
            "909",
          ],
          "codeGenerated": true,
          "dependent": false,
          "depth": 0,
          "errors": 0,
          "failed": false,
          "id": "314",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
          "index": 0,
          "index2": 3,
          "issuer": undefined,
          "issuerId": undefined,
          "issuerName": undefined,
          "issuerPath": Array [],
          "moduleType": "javascript/auto",
          "name": "./fixtures/esm/abc.js",
          "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
          "optimizationBailout": Array [],
          "optional": false,
          "orphan": false,
          "postOrderIndex": 3,
          "preOrderIndex": 0,
          "providedExports": Array [],
          "reasons": Array [
            Object {
              "moduleId": undefined,
              "moduleIdentifier": undefined,
              "moduleName": undefined,
              "type": "entry",
              "userRequest": "./fixtures/esm/abc",
            },
          ],
          "size": 80,
          "sizes": Object {
            "javascript": 80,
          },
          "type": "module",
          "usedExports": Array [],
          "warnings": 0,
        },
        Object {
          "assets": Array [],
          "buildTimeExecuted": false,
          "built": true,
          "cacheable": true,
          "cached": false,
          "chunks": Array [
            "909",
          ],
          "codeGenerated": true,
          "dependent": true,
          "depth": 1,
          "errors": 0,
          "failed": false,
          "id": "178",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/esm/b.js",
          "index": 2,
          "index2": 1,
          "issuer": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
          "issuerId": "314",
          "issuerName": "./fixtures/esm/abc.js",
          "issuerPath": Array [
            Object {
              "id": "314",
              "identifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
              "name": "./fixtures/esm/abc.js",
            },
          ],
          "moduleType": "javascript/auto",
          "name": "./fixtures/esm/b.js",
          "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/esm/b.js",
          "optimizationBailout": Array [],
          "optional": false,
          "orphan": false,
          "postOrderIndex": 1,
          "preOrderIndex": 2,
          "providedExports": Array [
            "b",
            "default",
          ],
          "reasons": Array [
            Object {
              "moduleId": "314",
              "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
              "moduleName": "./fixtures/esm/abc.js",
              "type": "esm import",
              "userRequest": "./b",
            },
            Object {
              "moduleId": "314",
              "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
              "moduleName": "./fixtures/esm/abc.js",
              "type": "esm import specifier",
              "userRequest": "./b",
            },
          ],
          "size": 38,
          "sizes": Object {
            "javascript": 38,
          },
          "type": "module",
          "usedExports": Array [
            "default",
          ],
          "warnings": 0,
        },
        Object {
          "assets": Array [],
          "buildTimeExecuted": false,
          "built": true,
          "cacheable": true,
          "cached": false,
          "chunks": Array [
            "909",
          ],
          "codeGenerated": true,
          "dependent": true,
          "depth": 1,
          "errors": 0,
          "failed": false,
          "id": "609",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/esm/c.js",
          "index": 3,
          "index2": 2,
          "issuer": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
          "issuerId": "314",
          "issuerName": "./fixtures/esm/abc.js",
          "issuerPath": Array [
            Object {
              "id": "314",
              "identifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
              "name": "./fixtures/esm/abc.js",
            },
          ],
          "moduleType": "javascript/auto",
          "name": "./fixtures/esm/c.js",
          "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/esm/c.js",
          "optimizationBailout": Array [],
          "optional": false,
          "orphan": false,
          "postOrderIndex": 2,
          "preOrderIndex": 3,
          "providedExports": Array [
            "c",
            "default",
          ],
          "reasons": Array [
            Object {
              "moduleId": "314",
              "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
              "moduleName": "./fixtures/esm/abc.js",
              "type": "esm import",
              "userRequest": "./c",
            },
            Object {
              "moduleId": "314",
              "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
              "moduleName": "./fixtures/esm/abc.js",
              "type": "esm import specifier",
              "userRequest": "./c",
            },
          ],
          "size": 37,
          "sizes": Object {
            "javascript": 37,
          },
          "type": "module",
          "usedExports": true,
          "warnings": 0,
        },
      ],
      "names": Array [
        "main",
      ],
      "origins": Array [
        Object {
          "loc": "main",
          "module": "",
          "moduleIdentifier": "",
          "moduleName": "",
          "request": "./fixtures/esm/abc",
        },
      ],
      "parents": Array [],
      "reason": undefined,
      "rendered": true,
      "runtime": Array [
        "main",
      ],
      "siblings": Array [],
      "size": 192,
      "sizes": Object {
        "javascript": 192,
        "runtime": 677,
      },
      "type": "chunk",
    },
  ],
  "entrypoints": Object {
    "main": Object {
      "assets": Array [
        Object {
          "name": "main.js",
          "size": 761,
        },
      ],
      "assetsSize": 761,
      "chunks": Array [
        "909",
      ],
      "name": "main",
    },
  },
  "errors": Array [],
  "errorsCount": 0,
  "filteredModules": undefined,
  "hash": "59bbea9a66eb590db492",
  "modules": Array [
    Object {
      "assets": Array [],
      "buildTimeExecuted": false,
      "built": true,
      "cacheable": true,
      "cached": false,
      "chunks": Array [
        "909",
      ],
      "codeGenerated": true,
      "dependent": undefined,
      "depth": 0,
      "errors": 0,
      "failed": false,
      "id": "314",
      "identifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
      "index": 0,
      "index2": 3,
      "issuer": undefined,
      "issuerId": undefined,
      "issuerName": undefined,
      "issuerPath": Array [],
      "moduleType": "javascript/auto",
      "name": "./fixtures/esm/abc.js",
      "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
      "optimizationBailout": Array [],
      "optional": false,
      "orphan": false,
      "postOrderIndex": 3,
      "preOrderIndex": 0,
      "providedExports": Array [],
      "reasons": Array [
        Object {
          "moduleId": undefined,
          "moduleIdentifier": undefined,
          "moduleName": undefined,
          "type": "entry",
          "userRequest": "./fixtures/esm/abc",
        },
      ],
      "size": 80,
      "sizes": Object {
        "javascript": 80,
      },
      "type": "module",
      "usedExports": Array [],
      "warnings": 0,
    },
    Object {
      "assets": Array [],
      "buildTimeExecuted": false,
      "built": true,
      "cacheable": true,
      "cached": false,
      "chunks": Array [
        "909",
      ],
      "codeGenerated": true,
      "dependent": undefined,
      "depth": 1,
      "errors": 0,
      "failed": false,
      "id": "83",
      "identifier": "<PROJECT_ROOT>/tests/fixtures/esm/a.js",
      "index": 1,
      "index2": 0,
      "issuer": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
      "issuerId": "314",
      "issuerName": "./fixtures/esm/abc.js",
      "issuerPath": Array [
        Object {
          "id": "314",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
          "name": "./fixtures/esm/abc.js",
        },
      ],
      "moduleType": "javascript/auto",
      "name": "./fixtures/esm/a.js",
      "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/esm/a.js",
      "optimizationBailout": Array [],
      "optional": false,
      "orphan": false,
      "postOrderIndex": 0,
      "preOrderIndex": 1,
      "providedExports": Array [
        "a",
        "default",
      ],
      "reasons": Array [
        Object {
          "moduleId": "314",
          "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
          "moduleName": "./fixtures/esm/abc.js",
          "type": "esm import",
          "userRequest": "./a",
        },
        Object {
          "moduleId": "314",
          "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
          "moduleName": "./fixtures/esm/abc.js",
          "type": "esm import specifier",
          "userRequest": "./a",
        },
      ],
      "size": 37,
      "sizes": Object {
        "javascript": 37,
      },
      "type": "module",
      "usedExports": Array [
        "a",
      ],
      "warnings": 0,
    },
    Object {
      "assets": Array [],
      "buildTimeExecuted": false,
      "built": true,
      "cacheable": true,
      "cached": false,
      "chunks": Array [
        "909",
      ],
      "codeGenerated": true,
      "dependent": undefined,
      "depth": 1,
      "errors": 0,
      "failed": false,
      "id": "178",
      "identifier": "<PROJECT_ROOT>/tests/fixtures/esm/b.js",
      "index": 2,
      "index2": 1,
      "issuer": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
      "issuerId": "314",
      "issuerName": "./fixtures/esm/abc.js",
      "issuerPath": Array [
        Object {
          "id": "314",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
          "name": "./fixtures/esm/abc.js",
        },
      ],
      "moduleType": "javascript/auto",
      "name": "./fixtures/esm/b.js",
      "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/esm/b.js",
      "optimizationBailout": Array [],
      "optional": false,
      "orphan": false,
      "postOrderIndex": 1,
      "preOrderIndex": 2,
      "providedExports": Array [
        "b",
        "default",
      ],
      "reasons": Array [
        Object {
          "moduleId": "314",
          "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
          "moduleName": "./fixtures/esm/abc.js",
          "type": "esm import",
          "userRequest": "./b",
        },
        Object {
          "moduleId": "314",
          "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
          "moduleName": "./fixtures/esm/abc.js",
          "type": "esm import specifier",
          "userRequest": "./b",
        },
      ],
      "size": 38,
      "sizes": Object {
        "javascript": 38,
      },
      "type": "module",
      "usedExports": Array [
        "default",
      ],
      "warnings": 0,
    },
    Object {
      "assets": Array [],
      "buildTimeExecuted": false,
      "built": true,
      "cacheable": true,
      "cached": false,
      "chunks": Array [
        "909",
      ],
      "codeGenerated": true,
      "dependent": undefined,
      "depth": 1,
      "errors": 0,
      "failed": false,
      "id": "609",
      "identifier": "<PROJECT_ROOT>/tests/fixtures/esm/c.js",
      "index": 3,
      "index2": 2,
      "issuer": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
      "issuerId": "314",
      "issuerName": "./fixtures/esm/abc.js",
      "issuerPath": Array [
        Object {
          "id": "314",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
          "name": "./fixtures/esm/abc.js",
        },
      ],
      "moduleType": "javascript/auto",
      "name": "./fixtures/esm/c.js",
      "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/esm/c.js",
      "optimizationBailout": Array [],
      "optional": false,
      "orphan": false,
      "postOrderIndex": 2,
      "preOrderIndex": 3,
      "providedExports": Array [
        "c",
        "default",
      ],
      "reasons": Array [
        Object {
          "moduleId": "314",
          "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
          "moduleName": "./fixtures/esm/abc.js",
          "type": "esm import",
          "userRequest": "./c",
        },
        Object {
          "moduleId": "314",
          "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/esm/abc.js",
          "moduleName": "./fixtures/esm/abc.js",
          "type": "esm import specifier",
          "userRequest": "./c",
        },
      ],
      "size": 37,
      "sizes": Object {
        "javascript": 37,
      },
      "type": "module",
      "usedExports": true,
      "warnings": 0,
    },
    Object {
      "assets": Array [],
      "buildTimeExecuted": false,
      "built": false,
      "cacheable": true,
      "cached": false,
      "chunks": Array [
        "909",
      ],
      "codeGenerated": true,
      "dependent": false,
      "depth": undefined,
      "errors": 0,
      "failed": false,
      "id": "",
      "identifier": "webpack/runtime/has_own_property",
      "index": undefined,
      "index2": undefined,
      "issuer": undefined,
      "issuerId": undefined,
      "issuerName": undefined,
      "issuerPath": Array [],
      "moduleType": "runtime",
      "name": "webpack/runtime/has_own_property",
      "nameForCondition": undefined,
      "optimizationBailout": Array [],
      "optional": false,
      "orphan": false,
      "postOrderIndex": undefined,
      "preOrderIndex": undefined,
      "providedExports": Array [],
      "reasons": Array [],
      "size": 107,
      "sizes": Object {
        "runtime": 107,
      },
      "type": "module",
      "usedExports": null,
      "warnings": 0,
    },
    Object {
      "assets": Array [],
      "buildTimeExecuted": false,
      "built": false,
      "cacheable": true,
      "cached": false,
      "chunks": Array [
        "909",
      ],
      "codeGenerated": true,
      "dependent": false,
      "depth": undefined,
      "errors": 0,
      "failed": false,
      "id": "",
      "identifier": "webpack/runtime/make_namespace_object",
      "index": undefined,
      "index2": undefined,
      "issuer": undefined,
      "issuerId": undefined,
      "issuerName": undefined,
      "issuerPath": Array [],
      "moduleType": "runtime",
      "name": "webpack/runtime/make_namespace_object",
      "nameForCondition": undefined,
      "optimizationBailout": Array [],
      "optional": false,
      "orphan": false,
      "postOrderIndex": undefined,
      "preOrderIndex": undefined,
      "providedExports": Array [],
      "reasons": Array [],
      "size": 280,
      "sizes": Object {
        "runtime": 280,
      },
      "type": "module",
      "usedExports": null,
      "warnings": 0,
    },
    Object {
      "assets": Array [],
      "buildTimeExecuted": false,
      "built": false,
      "cacheable": true,
      "cached": false,
      "chunks": Array [
        "909",
      ],
      "codeGenerated": true,
      "dependent": false,
      "depth": undefined,
      "errors": 0,
      "failed": false,
      "id": "",
      "identifier": "webpack/runtime/define_property_getters",
      "index": undefined,
      "index2": undefined,
      "issuer": undefined,
      "issuerId": undefined,
      "issuerName": undefined,
      "issuerPath": Array [],
      "moduleType": "runtime",
      "name": "webpack/runtime/define_property_getters",
      "nameForCondition": undefined,
      "optimizationBailout": Array [],
      "optional": false,
      "orphan": false,
      "postOrderIndex": undefined,
      "preOrderIndex": undefined,
      "providedExports": Array [],
      "reasons": Array [],
      "size": 290,
      "sizes": Object {
        "runtime": 290,
      },
      "type": "module",
      "usedExports": null,
      "warnings": 0,
    },
  ],
  "namedChunkGroups": Object {
    "main": Object {
      "assets": Array [
        Object {
          "name": "main.js",
          "size": 761,
        },
      ],
      "assetsSize": 761,
      "chunks": Array [
        "909",
      ],
      "name": "main",
    },
  },
  "outputPath": "<PROJECT_ROOT>/dist",
  "publicPath": "auto",
  "warnings": Array [],
  "warningsCount": 0,
}
`;

exports[`statsAPI statsAPI/ids should have ids when ids is true 1`] = `
Object {
  "assets": Array [
    Object {
      "chunkNames": Array [
        "main",
      ],
      "chunks": Array [
        "909",
      ],
      "emitted": true,
      "info": Object {
        "chunkHash": Array [],
        "contentHash": Array [],
        "development": false,
        "hotModuleReplacement": false,
        "immutable": false,
        "javascriptModule": false,
        "minimized": true,
        "related": Object {},
      },
      "name": "main.js",
      "size": 206,
      "type": "asset",
    },
  ],
  "assetsByChunkName": Object {
    "main": Array [
      "main.js",
    ],
  },
  "chunks": Array [
    Object {
      "auxiliaryFiles": Array [],
      "childrenByOrder": Object {},
      "entry": true,
      "files": Array [
        "main.js",
      ],
      "hash": "3c2ed4017f8489a873cb",
      "id": "909",
      "idHints": Array [],
      "initial": true,
      "names": Array [
        "main",
      ],
      "reason": undefined,
      "rendered": true,
      "runtime": Array [
        "main",
      ],
      "size": 55,
      "sizes": Object {
        "javascript": 55,
      },
      "type": "chunk",
    },
  ],
  "filteredModules": undefined,
  "modules": Array [
    Object {
      "buildTimeExecuted": false,
      "built": true,
      "cacheable": true,
      "cached": false,
      "chunks": Array [
        "909",
      ],
      "codeGenerated": true,
      "dependent": undefined,
      "errors": 0,
      "failed": false,
      "id": "585",
      "identifier": "<PROJECT_ROOT>/tests/fixtures/a.js",
      "index": 0,
      "index2": 0,
      "issuer": undefined,
      "issuerId": undefined,
      "issuerName": undefined,
      "issuerPath": Array [],
      "moduleType": "javascript/auto",
      "name": "./fixtures/a.js",
      "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/a.js",
      "optional": false,
      "orphan": false,
      "postOrderIndex": 0,
      "preOrderIndex": 0,
      "size": 55,
      "sizes": Object {
        "javascript": 55,
      },
      "type": "module",
      "warnings": 0,
    },
  ],
}
`;

exports[`statsAPI statsAPI/with-query should output stats with query 1`] = `
Object {
  "assets": Array [
    Object {
      "chunkNames": Array [
        "main",
      ],
      "chunks": Array [
        "909",
      ],
      "emitted": true,
      "info": Object {
        "chunkHash": Array [],
        "contentHash": Array [],
        "development": false,
        "hotModuleReplacement": false,
        "immutable": false,
        "javascriptModule": false,
        "minimized": true,
        "related": Object {},
      },
      "name": "main.js",
      "size": 337,
      "type": "asset",
    },
  ],
  "assetsByChunkName": Object {
    "main": Array [
      "main.js",
    ],
  },
  "children": Array [],
  "chunks": Array [
    Object {
      "auxiliaryFiles": Array [],
      "children": Array [],
      "childrenByOrder": Object {},
      "entry": true,
      "files": Array [
        "main.js",
      ],
      "hash": "bd40857208e9f471fe8e",
      "id": "909",
      "idHints": Array [],
      "initial": true,
      "modules": Array [
        Object {
          "assets": Array [],
          "buildTimeExecuted": false,
          "built": true,
          "cacheable": true,
          "cached": false,
          "chunks": Array [
            "909",
          ],
          "codeGenerated": true,
          "dependent": true,
          "depth": 2,
          "errors": 0,
          "failed": false,
          "id": "585",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/a.js",
          "index": 3,
          "index2": 1,
          "issuer": "<PROJECT_ROOT>/tests/fixtures/c.js?c=3",
          "issuerId": "432",
          "issuerName": "./fixtures/c.js?c=3",
          "issuerPath": Array [
            Object {
              "id": "919",
              "identifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
              "name": "./fixtures/abc-query.js",
            },
            Object {
              "id": "432",
              "identifier": "<PROJECT_ROOT>/tests/fixtures/c.js?c=3",
              "name": "./fixtures/c.js?c=3",
            },
          ],
          "moduleType": "javascript/auto",
          "name": "./fixtures/a.js",
          "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/a.js",
          "optimizationBailout": Array [
            "Statement with side_effects in source code at ./fixtures/a.js:1:0-3:2",
          ],
          "optional": false,
          "orphan": false,
          "postOrderIndex": 1,
          "preOrderIndex": 3,
          "providedExports": Array [],
          "reasons": Array [
            Object {
              "moduleId": "585",
              "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/a.js",
              "moduleName": "./fixtures/a.js",
              "type": "cjs self exports reference",
              "userRequest": "self",
            },
            Object {
              "moduleId": "432",
              "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/c.js?c=3",
              "moduleName": "./fixtures/c.js?c=3",
              "type": "cjs require",
              "userRequest": "./a",
            },
          ],
          "size": 55,
          "sizes": Object {
            "javascript": 55,
          },
          "source": "module.exports = function a() {
	return \\"This is a\\";
};",
          "type": "module",
          "usedExports": null,
          "warnings": 0,
        },
        Object {
          "assets": Array [],
          "buildTimeExecuted": false,
          "built": true,
          "cacheable": true,
          "cached": false,
          "chunks": Array [
            "909",
          ],
          "codeGenerated": true,
          "dependent": true,
          "depth": 1,
          "errors": 0,
          "failed": false,
          "id": "958",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/a.js?a=1",
          "index": 1,
          "index2": 0,
          "issuer": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
          "issuerId": "919",
          "issuerName": "./fixtures/abc-query.js",
          "issuerPath": Array [
            Object {
              "id": "919",
              "identifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
              "name": "./fixtures/abc-query.js",
            },
          ],
          "moduleType": "javascript/auto",
          "name": "./fixtures/a.js?a=1",
          "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/a.js",
          "optimizationBailout": Array [
            "Statement with side_effects in source code at ./fixtures/a.js?a=1:1:0-3:2",
          ],
          "optional": false,
          "orphan": false,
          "postOrderIndex": 0,
          "preOrderIndex": 1,
          "providedExports": Array [],
          "reasons": Array [
            Object {
              "moduleId": "958",
              "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/a.js?a=1",
              "moduleName": "./fixtures/a.js?a=1",
              "type": "cjs self exports reference",
              "userRequest": "self",
            },
            Object {
              "moduleId": "919",
              "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
              "moduleName": "./fixtures/abc-query.js",
              "type": "cjs export require",
              "userRequest": "./a?a=1",
            },
          ],
          "size": 55,
          "sizes": Object {
            "javascript": 55,
          },
          "source": "module.exports = function a() {
	return \\"This is a\\";
};",
          "type": "module",
          "usedExports": null,
          "warnings": 0,
        },
        Object {
          "assets": Array [],
          "buildTimeExecuted": false,
          "built": true,
          "cacheable": true,
          "cached": false,
          "chunks": Array [
            "909",
          ],
          "codeGenerated": true,
          "dependent": false,
          "depth": 0,
          "errors": 0,
          "failed": false,
          "id": "919",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
          "index": 0,
          "index2": 3,
          "issuer": undefined,
          "issuerId": undefined,
          "issuerName": undefined,
          "issuerPath": Array [],
          "moduleType": "javascript/auto",
          "name": "./fixtures/abc-query.js",
          "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
          "optimizationBailout": Array [
            "Statement with side_effects in source code at ./fixtures/abc-query.js:1:0-31",
          ],
          "optional": false,
          "orphan": false,
          "postOrderIndex": 3,
          "preOrderIndex": 0,
          "providedExports": Array [
            "a",
            "c",
          ],
          "reasons": Array [
            Object {
              "moduleId": undefined,
              "moduleIdentifier": undefined,
              "moduleName": undefined,
              "type": "entry",
              "userRequest": "./fixtures/abc-query",
            },
          ],
          "size": 99,
          "sizes": Object {
            "javascript": 99,
          },
          "source": "exports.a = require(\\"./a?a=1\\");
// exports.b = require(\\"./b?b=2\\");
exports.c = require(\\"./c?c=3\\");
",
          "type": "module",
          "usedExports": Array [],
          "warnings": 0,
        },
        Object {
          "assets": Array [],
          "buildTimeExecuted": false,
          "built": true,
          "cacheable": true,
          "cached": false,
          "chunks": Array [
            "909",
          ],
          "codeGenerated": true,
          "dependent": true,
          "depth": 1,
          "errors": 0,
          "failed": false,
          "id": "432",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/c.js?c=3",
          "index": 2,
          "index2": 2,
          "issuer": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
          "issuerId": "919",
          "issuerName": "./fixtures/abc-query.js",
          "issuerPath": Array [
            Object {
              "id": "919",
              "identifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
              "name": "./fixtures/abc-query.js",
            },
          ],
          "moduleType": "javascript/auto",
          "name": "./fixtures/c.js?c=3",
          "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/c.js",
          "optimizationBailout": Array [
            "Statement with side_effects in source code at ./fixtures/c.js?c=3:1:0-4:2",
          ],
          "optional": false,
          "orphan": false,
          "postOrderIndex": 2,
          "preOrderIndex": 2,
          "providedExports": Array [],
          "reasons": Array [
            Object {
              "moduleId": "919",
              "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
              "moduleName": "./fixtures/abc-query.js",
              "type": "cjs export require",
              "userRequest": "./c?c=3",
            },
            Object {
              "moduleId": "432",
              "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/c.js?c=3",
              "moduleName": "./fixtures/c.js?c=3",
              "type": "cjs self exports reference",
              "userRequest": "self",
            },
          ],
          "size": 72,
          "sizes": Object {
            "javascript": 72,
          },
          "source": "module.exports = function b() {
	require(\\"./a\\");
	return \\"This is c\\";
};",
          "type": "module",
          "usedExports": null,
          "warnings": 0,
        },
      ],
      "names": Array [
        "main",
      ],
      "origins": Array [
        Object {
          "loc": "main",
          "module": "",
          "moduleIdentifier": "",
          "moduleName": "",
          "request": "./fixtures/abc-query",
        },
      ],
      "parents": Array [],
      "reason": undefined,
      "rendered": true,
      "runtime": Array [
        "main",
      ],
      "siblings": Array [],
      "size": 281,
      "sizes": Object {
        "javascript": 281,
      },
      "type": "chunk",
    },
  ],
  "entrypoints": Object {
    "main": Object {
      "assets": Array [
        Object {
          "name": "main.js",
          "size": 337,
        },
      ],
      "assetsSize": 337,
      "chunks": Array [
        "909",
      ],
      "name": "main",
    },
  },
  "env": undefined,
  "errors": Array [],
  "errorsCount": 0,
  "filteredModules": undefined,
  "hash": "4d422e3de07d6ed9da90",
  "modules": Array [
    Object {
      "assets": Array [],
      "buildTimeExecuted": false,
      "built": true,
      "cacheable": true,
      "cached": false,
      "chunks": Array [
        "909",
      ],
      "codeGenerated": true,
      "dependent": undefined,
      "depth": 0,
      "errors": 0,
      "failed": false,
      "id": "919",
      "identifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
      "index": 0,
      "index2": 3,
      "issuer": undefined,
      "issuerId": undefined,
      "issuerName": undefined,
      "issuerPath": Array [],
      "moduleType": "javascript/auto",
      "name": "./fixtures/abc-query.js",
      "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
      "optimizationBailout": Array [
        "Statement with side_effects in source code at ./fixtures/abc-query.js:1:0-31",
      ],
      "optional": false,
      "orphan": false,
      "postOrderIndex": 3,
      "preOrderIndex": 0,
      "providedExports": Array [
        "a",
        "c",
      ],
      "reasons": Array [
        Object {
          "moduleId": undefined,
          "moduleIdentifier": undefined,
          "moduleName": undefined,
          "type": "entry",
          "userRequest": "./fixtures/abc-query",
        },
      ],
      "size": 99,
      "sizes": Object {
        "javascript": 99,
      },
      "source": "exports.a = require(\\"./a?a=1\\");
// exports.b = require(\\"./b?b=2\\");
exports.c = require(\\"./c?c=3\\");
",
      "type": "module",
      "usedExports": Array [],
      "warnings": 0,
    },
    Object {
      "assets": Array [],
      "buildTimeExecuted": false,
      "built": true,
      "cacheable": true,
      "cached": false,
      "chunks": Array [
        "909",
      ],
      "codeGenerated": true,
      "dependent": undefined,
      "depth": 1,
      "errors": 0,
      "failed": false,
      "id": "958",
      "identifier": "<PROJECT_ROOT>/tests/fixtures/a.js?a=1",
      "index": 1,
      "index2": 0,
      "issuer": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
      "issuerId": "919",
      "issuerName": "./fixtures/abc-query.js",
      "issuerPath": Array [
        Object {
          "id": "919",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
          "name": "./fixtures/abc-query.js",
        },
      ],
      "moduleType": "javascript/auto",
      "name": "./fixtures/a.js?a=1",
      "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/a.js",
      "optimizationBailout": Array [
        "Statement with side_effects in source code at ./fixtures/a.js?a=1:1:0-3:2",
      ],
      "optional": false,
      "orphan": false,
      "postOrderIndex": 0,
      "preOrderIndex": 1,
      "providedExports": Array [],
      "reasons": Array [
        Object {
          "moduleId": "958",
          "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/a.js?a=1",
          "moduleName": "./fixtures/a.js?a=1",
          "type": "cjs self exports reference",
          "userRequest": "self",
        },
        Object {
          "moduleId": "919",
          "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
          "moduleName": "./fixtures/abc-query.js",
          "type": "cjs export require",
          "userRequest": "./a?a=1",
        },
      ],
      "size": 55,
      "sizes": Object {
        "javascript": 55,
      },
      "source": "module.exports = function a() {
	return \\"This is a\\";
};",
      "type": "module",
      "usedExports": null,
      "warnings": 0,
    },
    Object {
      "assets": Array [],
      "buildTimeExecuted": false,
      "built": true,
      "cacheable": true,
      "cached": false,
      "chunks": Array [
        "909",
      ],
      "codeGenerated": true,
      "dependent": undefined,
      "depth": 1,
      "errors": 0,
      "failed": false,
      "id": "432",
      "identifier": "<PROJECT_ROOT>/tests/fixtures/c.js?c=3",
      "index": 2,
      "index2": 2,
      "issuer": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
      "issuerId": "919",
      "issuerName": "./fixtures/abc-query.js",
      "issuerPath": Array [
        Object {
          "id": "919",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
          "name": "./fixtures/abc-query.js",
        },
      ],
      "moduleType": "javascript/auto",
      "name": "./fixtures/c.js?c=3",
      "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/c.js",
      "optimizationBailout": Array [
        "Statement with side_effects in source code at ./fixtures/c.js?c=3:1:0-4:2",
      ],
      "optional": false,
      "orphan": false,
      "postOrderIndex": 2,
      "preOrderIndex": 2,
      "providedExports": Array [],
      "reasons": Array [
        Object {
          "moduleId": "919",
          "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
          "moduleName": "./fixtures/abc-query.js",
          "type": "cjs export require",
          "userRequest": "./c?c=3",
        },
        Object {
          "moduleId": "432",
          "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/c.js?c=3",
          "moduleName": "./fixtures/c.js?c=3",
          "type": "cjs self exports reference",
          "userRequest": "self",
        },
      ],
      "size": 72,
      "sizes": Object {
        "javascript": 72,
      },
      "source": "module.exports = function b() {
	require(\\"./a\\");
	return \\"This is c\\";
};",
      "type": "module",
      "usedExports": null,
      "warnings": 0,
    },
    Object {
      "assets": Array [],
      "buildTimeExecuted": false,
      "built": true,
      "cacheable": true,
      "cached": false,
      "chunks": Array [
        "909",
      ],
      "codeGenerated": true,
      "dependent": undefined,
      "depth": 2,
      "errors": 0,
      "failed": false,
      "id": "585",
      "identifier": "<PROJECT_ROOT>/tests/fixtures/a.js",
      "index": 3,
      "index2": 1,
      "issuer": "<PROJECT_ROOT>/tests/fixtures/c.js?c=3",
      "issuerId": "432",
      "issuerName": "./fixtures/c.js?c=3",
      "issuerPath": Array [
        Object {
          "id": "919",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/abc-query.js",
          "name": "./fixtures/abc-query.js",
        },
        Object {
          "id": "432",
          "identifier": "<PROJECT_ROOT>/tests/fixtures/c.js?c=3",
          "name": "./fixtures/c.js?c=3",
        },
      ],
      "moduleType": "javascript/auto",
      "name": "./fixtures/a.js",
      "nameForCondition": "<PROJECT_ROOT>/tests/fixtures/a.js",
      "optimizationBailout": Array [
        "Statement with side_effects in source code at ./fixtures/a.js:1:0-3:2",
      ],
      "optional": false,
      "orphan": false,
      "postOrderIndex": 1,
      "preOrderIndex": 3,
      "providedExports": Array [],
      "reasons": Array [
        Object {
          "moduleId": "585",
          "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/a.js",
          "moduleName": "./fixtures/a.js",
          "type": "cjs self exports reference",
          "userRequest": "self",
        },
        Object {
          "moduleId": "432",
          "moduleIdentifier": "<PROJECT_ROOT>/tests/fixtures/c.js?c=3",
          "moduleName": "./fixtures/c.js?c=3",
          "type": "cjs require",
          "userRequest": "./a",
        },
      ],
      "size": 55,
      "sizes": Object {
        "javascript": 55,
      },
      "source": "module.exports = function a() {
	return \\"This is a\\";
};",
      "type": "module",
      "usedExports": null,
      "warnings": 0,
    },
  ],
  "namedChunkGroups": Object {
    "main": Object {
      "assets": Array [
        Object {
          "name": "main.js",
          "size": 337,
        },
      ],
      "assetsSize": 337,
      "chunks": Array [
        "909",
      ],
      "name": "main",
    },
  },
  "outputPath": "<PROJECT_ROOT>/dist",
  "publicPath": "auto",
  "warnings": Array [],
  "warningsCount": 0,
}
`;
